apps/baikal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: baikal
  namespace: baikal
  annotations:
    external-dns.alpha.kubernetes.io/target: michaelthomson.ddns.net
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: baikal.michaelthomson.dev
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: baikal
            port: 
              name: http
  tls:
    - hosts:
        - baikal.michaelthomson.dev
      secretName: letsencrypt-wildcard-cert-michaelthomson.dev
